--- a/src/modules/px4iofirmware/CMakeLists.txt
+++ b/src/modules/px4iofirmware/CMakeLists.txt
@@ -40,6 +40,7 @@ set_directory_properties(PROPERTIES
 set(c_flags)
 set(exe_linker_flags)
 set(cxx_flags)
+set(optimization_flags)
 set(include_dirs)
 set(link_dirs)
 set(definitions)
@@ -52,6 +53,7 @@ px4_os_add_flags(
 	BOARD ${config_io_board}
 	C_FLAGS c_flags
 	CXX_FLAGS cxx_flags
+	OPTIMIZATION_FLAGS optimization_flags
 	EXE_LINKER_FLAGS exe_linker_flags
 	INCLUDE_DIRS include_dirs
 	LINK_DIRS link_dirs
