--- a/src/modules/local_position_estimator/CMakeLists.txt
+++ b/src/modules/local_position_estimator/CMakeLists.txt
@@ -45,6 +45,7 @@ px4_add_module(
 		sensors/gps.cpp
 		sensors/baro.cpp
 		sensors/vision.cpp
+		sensors/vision_velocity.cpp
 		sensors/mocap.cpp
 	DEPENDS
 		platforms__common
