add new message of sd log: position and velocity PID error

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -119,6 +119,8 @@ set(msg_file_names
 	vtol_vehicle_status.msg
 	wind_estimate.msg
 	
+	pid_err.msg
+	
 	###################################
 	fixed_target_position_g2p.msg
 	fixed_target_position_p2m.msg
