px4iofirmware: added support for SRXL

--- a/src/modules/px4iofirmware/CMakeLists.txt
+++ b/src/modules/px4iofirmware/CMakeLists.txt
@@ -90,6 +90,7 @@ set(srcs
 	../../lib/rc/sumd.c
 	../../lib/rc/sbus.c
 	../../lib/rc/dsm.c
+	../../lib/rc/srxl.c
 	../../drivers/stm32/drv_hrt.c
 	../../drivers/stm32/drv_io_timer.c
 	../../drivers/stm32/drv_pwm_servo.c
