--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -58,6 +58,7 @@ set(msg_files
 	esc_status.msg
 	estimator_status.msg
 	follow_target.msg
+	flight_test_input.msg
 	geofence_result.msg
 	gps_dump.msg
 	gps_inject_data.msg
