--- a/ROMFS/px4fmu_common/mixers/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/mixers/CMakeLists.txt
@@ -81,6 +81,7 @@ px4_add_romfs_files(
 	ugv_generic.main.mix
 	Viper.main.mix
 	vtol_AAERT.aux.mix
+	vtol_AAVV.aux.mix
 	vtol_AAVVT.aux.mix
 	vtol_convergence.main.mix
 	vtol_delta.aux.mix
