--- a/src/modules/uavcan/CMakeLists.txt
+++ b/src/modules/uavcan/CMakeLists.txt
@@ -74,6 +74,7 @@ px4_add_module(
 		# Actuators
 		actuators/esc.cpp
 		actuators/hardpoint.cpp
+                actuators/enord_esc.cpp
 
 		# Sensors
 		sensors/sensor_bridge.cpp
