Change message name from COMPANION_STATUS to COMPANION_PROCESS_STATUS

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -44,7 +44,7 @@ set(msg_files
 	collision_report.msg
 	collision_constraints.msg
 	commander_state.msg
-	companion_status.msg
+	companion_process_status.msg
 	cpuload.msg
 	debug_array.msg
 	debug_key_value.msg
