introduce vehicle_thrust_setpoint

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -136,6 +136,7 @@ set(msg_files
 	vehicle_roi.msg
 	vehicle_status.msg
 	vehicle_status_flags.msg
+	vehicle_thrust_setpoint.msg
 	vehicle_trajectory_waypoint.msg
 	vtol_vehicle_status.msg
 	wind_estimate.msg
