--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "Tools/Maneuvers"]
 	path = Tools/Maneuvers
 	url = https://github.com/Stifael/px4maneuvers.git
+[submodule "integrationtests/tests/ulogtests/external/uloganalysis"]
+	path = integrationtests/tests/ulogtests/external/uloganalysis
+	url = git@github.com:Stifael/uloganalysis.git
