Relocate board specific tone_alarm.cpp contents to header files, rename files to hardware specific names. Rename TONEALARM0_DEVICE_PATH to TONE_ALARM0_DEVICE_PATH, organize register #defines. Refactor ToneAlarm classes to inherit from ModuleBase rather than CDev.

--- a/src/drivers/samv7/tone_alarm/CMakeLists.txt
+++ b/src/drivers/samv7/tone_alarm/CMakeLists.txt
@@ -35,7 +35,8 @@ px4_add_module(
 	MODULE drivers__tone_alarm
 	MAIN tone_alarm
 	SRCS
-		tone_alarm.cpp
+		tone_alarm_samv7.cpp
+		../../tone_alarm/tone_alarm.cpp
 	DEPENDS
 		circuit_breaker
 		tunes
