--- a/boards/intel/aerofc-v1/CMakeLists.txt
+++ b/boards/intel/aerofc-v1/CMakeLists.txt
@@ -40,7 +40,8 @@ add_subdirectory(aerofc_adc)
 ############################################################################
 
 add_custom_target(upload
-	COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/aero_upload.sh $<TARGET_FILE:px4>
+	COMMAND
+		${CMAKE_CURRENT_SOURCE_DIR}/scripts/aero_upload.sh ${PX4_SOURCE_DIR}/Tools/px_uploader.py $<TARGET_FILE:px4>
 	DEPENDS px4
 	COMMENT "uploading px4"
 	USES_TERMINAL
