i2c: Check if i2c-dev.h is sane (fixes #11137)
On Debian-based systems a PX4 SITL build may fail if libi2c-dev package
is installed. Said package replaces the kernel i2c-dev.h header file
with its own version that has a conflicting definition for struct i2c_msg.

This PR attemts to identify these situations by trying to compile a small
C program that includes only i2c-dev.h and uses i2c_msg struct. This should
fail on systems with "sane" i2c-dev.h, and if it succeeds, then only
i2c-dev.h is used.

Note that DriverFramework submodule will have to be updated as well.

Signed-off-by: sfalexrog <sfalexrog@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,6 +354,9 @@ include(px4_add_common_flags)
 px4_add_common_flags()
 px4_os_add_flags()
 
+# Checks for i2c-dev.h sanity
+include(check_i2c_dev_h)
+
 #=============================================================================
 # message, and airframe generation
 #
