if building with catkin (or colcon), install also the launch files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -303,6 +303,11 @@ if (${PX4_PLATFORM} STREQUAL "posix")
 	# cmake testing only on posix
 	enable_testing()
 	include(CTest)
+
+	if (CATKIN_DEVEL_PREFIX)
+		# Install launch files
+		install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
+	endif()
 endif()
 
 #=============================================================================
