Add an airframe 4400_ssrc_fog_x
Add the airframe and the default parameters for communication between flight controller
and mission computer

Signed-off-by: Jukka Laitinen <jukkax@ssrc.tii.ae>

--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -66,6 +66,7 @@ px4_add_romfs_files(
 	4061_atl_mantis_edu
 	4071_ifo
 	4073_ifo-s
+	4400_ssrc_fog_x
 	4500_clover4
 	4900_crazyflie
 	4901_crazyflie21
