Create initial T-Motor M690B airframe by cloning the SSRC holybro X500 configuration
The T-Motor power management HW does not provide the I2C output that Pixhawk 5X needs
for current sensing. Create a new airframe config that specifies the correct value for
the INA226_SHUNT parameter. Add airframe to 'CMakeLists.txt'.

Rename T-Motor airframe to be more concise

Airframe file updated

--- a/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d/airframes/CMakeLists.txt
@@ -67,6 +67,7 @@ px4_add_romfs_files(
 	4071_ifo
 	4073_ifo-s
 	4400_ssrc_fog_x
+	4401_ssrc_fog_x_tmotor
 	4500_clover4
 	4900_crazyflie
 	4901_crazyflie21
