Refactor tune_definitions and add comments
1. Added comments to explain how tune related enum and arrays are
generated
2. Renamed and edited default_tunes.cpp and tune_definition.h, to be
'tune_deinitions.h and .cpp' repsectively
3. Removed unused tune_definition.h includes from other drivers

--- a/src/lib/tunes/CMakeLists.txt
+++ b/src/lib/tunes/CMakeLists.txt
@@ -32,8 +32,8 @@
 ############################################################################
 
 px4_add_library(tunes
-	default_tunes.cpp
-	tune_definition.h
+	tune_definitions.h
+	tune_definitions.cpp
 	tunes.cpp
 	tunes.h
 )
