Implement forward speed based yaw output scaling & debugging uORB topic
Apply forward speed lower bound clipping to prevent scalar explosion

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -140,6 +140,7 @@ set(msg_files
 	rate_ctrl_status.msg
 	rc_channels.msg
 	rc_parameter_map.msg
+	rover_pos_control.msg
 	rpm.msg
 	rtl_time_estimate.msg
 	satellite_info.msg
