--- a/src/drivers/osd/msp_osd/CMakeLists.txt
+++ b/src/drivers/osd/msp_osd/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2018 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2022 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -30,13 +30,16 @@
 # POSSIBILITY OF SUCH DAMAGE.
 #
 ############################################################################
+
 px4_add_module(
-	MODULE modules__msp_osd
+	MODULE drivers__osd__msp_osd
 	MAIN msp_osd
 	SRCS
+		msp_defines.h
 		msp_osd.cpp
+		msp_osd.hpp
 		MspV1.cpp
+		MspV1.hpp
 	DEPENDS
 		px4_work_queue
 	)
-
