--- a/src/drivers/osd/msp_osd/Kconfig
+++ b/src/drivers/osd/msp_osd/Kconfig
@@ -1,4 +1,4 @@
-menuconfig MODULES_MSP_OSD
+menuconfig DRIVERS_OSD_MSP_OSD
 	bool "msp_osd"
 	default n
 	---help---
@@ -7,6 +7,6 @@ menuconfig MODULES_MSP_OSD
 menuconfig USER_MSP_OSD
 	bool "msp_osd running as userspace module"
 	default y
-	depends on BOARD_PROTECTED && MODULES_MSP_OSD
+	depends on BOARD_PROTECTED && DRIVERS_OSD_MSP_OSD
 	---help---
 		Put msp_osd in userspace memory
